--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -6,7 +6,7 @@ footer(role='contentinfo')
                     a(href='/', title='')
                         img(src=img_url + 'logo-footer.png', alt='')
                 .col-md-6.block-footer
-                    //ul.menu-footer
+                    //-ul.menu-footer
                         li
                             a(href='/legal', title='Правовая информация') Правовая информация
                         li
@@ -25,13 +25,13 @@ footer(role='contentinfo')
                         li
                             a(href='http://vk.com/vsevi', title='')
                                 img(src=img_url + 'i-vk.png', alt='')
-        //
+        //-
            .top-footer
         .bottom-footer
             p © ВсеВидео, 2014. Все права защищены
-        //
+        //-
            .bottom-footer
-        //
+        //-
            .wrap-page
 #reg-enter.modal.fade(tabindex='-1', role='dialog', area-hidden='true')
     .modal-dialog
@@ -58,7 +58,7 @@ footer(role='contentinfo')
                                     label.col-sm-3.control-label(for='inputPassword') Пароль
                                     .col-sm-9
                                         input#inputPassword.form-control(type='password',name='password1',required)
-                                        //p Количество символов должно быть не менее 8-ми.
+                                        //-p Количество символов должно быть не менее 8-ми.
                                 .form-group
                                     label.col-sm-3.control-label(for='inputPasswordRe') Повторите пароль
                                     .col-sm-9
@@ -111,9 +111,9 @@ footer(role='contentinfo')
                                 li
                                     a(href='/login/google-oauth2', title='')
                                         img(src=img_url + 'i-go-b.png', alt='')
-                        //
+                        //-
                            .wrap-popup-content
-            //
+            //-
                .wrap-popup-content
 script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js')
 script(src=js_url + 'bootstrap.min.js')
