--- a/interface/jade/page_feed.jade
+++ b/interface/jade/page_feed.jade
@@ -3,7 +3,7 @@ include config
 include mixins
 include head
 body
-    .wrap-page
+    .wrap-page.bg-noise
         include header
         .content.brd-top(role='main')
             section
