--- a/interface/jade/page_search.jade
+++ b/interface/jade/page_search.jade
@@ -3,29 +3,29 @@ include config
 include mixins
 include head
 body
-    .wrap-page
+    .wrap-page.bg-noise
         include header
         .content(role='main')
             section.blue-block
-                .container
-                    if films && films.items && films.items.length
-                            h1.dots1.whiteh1.centerh1 Поиск
-                            .list-film
-                                .row#films
-                                    each item in films.items
-                                        mixin film_thumb(item)
-                            //
-                               .list-film
-                            if films.total_cnt >= 12
-                                .add-filter#films_more
-                                    .add-content.style-panel-action.rel.zmin
-                                        a(href='#') мало, хочу еще фильмов
-                                    //
-                                       .filter-content
-                                    img.img-responsive(src=img_url + 'shd-big.png', alt='')
-                                //
-                    else
-                        .sad-text К сожалению, мы ничего не нашли по вашему запросу.
+                .bg-noise
+                    .container
+                        if films && films.items && films.items.length
+                                h1.dots1.whiteh1.centerh1 Поиск
+                                .list-film
+                                    .row#films
+                                        each item in films.items
+                                            mixin film_thumb(item)
+                                //-
+                                   .list-film
+                                if films.total_cnt >= 12
+                                    .add-filter#films_more
+                                        .add-content.style-panel-action.rel.zmin
+                                            a(href='#') мало, хочу еще фильмов
+                                        //-
+                                           .filter-content
+                                        img.img-responsive(src=img_url + 'shd-big.png', alt='')
+                        else
+                            .sad-text К сожалению, мы ничего не нашли по вашему запросу.
         include footer
     script.
         $(document).ready(function () {window.InitApp({page_conf: !{JSON.stringify({search_text: search_text})}}, "Search")})
